--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="experience">
         <div class="one">
             <h2>Project</h2>
-            <ul>
+            <ul class="dotremove1">
             <li>HTML</li>
             <li>Quiz App</li>
             <li>To Do List</li>
@@ -57,7 +57,7 @@
         </div>
         <div class="three">
             <h2>Skills</h2>
-            <ul>
+            <ul class="dotremove2">
                 <li>Html</li>
                 <li>JS</li>
                 <li>React</li>
